# src/main/resources/static/api-docs/swagger.yaml
@@ -388,46 +388,11 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
 
-  /usuarios/{userId}/listas:
-      parameters:
-        - name: "userId"
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-          description: "Unique identifier of the user who owns the lists"
-
-      get:
-        summary: "Get user's lists of movies"
-        description: "Returns a paginated list of all movie lists created by a specific user."
-        tags: ["User's Lists"]
-        security:
-          - BearerAuth: [ ]
-        parameters:
-          - name: "page"
-            in: query
-            required: true
-            schema:
-              type: integer
-            description: "Page index (1..N)"
-        responses:
-          '200':
-            description: "Paginated lists retrieved successfully"
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Paginator'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-
   /listas:
     get:
-      summary: "Get public lists of movies"
-      description: "Returns a paginated list of all public movie lists."
-      tags: [ "Public Lists" ]
+      summary: "Get user's lists of movies"
+      description: "Returns a paginated list of all movie lists created by a specific user."
+      tags: [ "User's Lists" ]
       security:
         - BearerAuth: [ ]
       parameters:
@@ -446,6 +411,8 @@ paths:
                 $ref: '#/components/schemas/Paginator'
         '400':
           $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
 
     post:
       summary: "Create a new list of movies"
@@ -470,6 +437,30 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
+
+  /listas/publicas:
+    get:
+      summary: "Get public lists of movies"
+      description: "Returns a paginated list of all public movie lists."
+      tags: [ "Public Lists" ]
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: "page"
+          in: query
+          required: true
+          schema:
+            type: integer
+          description: "Page index (1..N)"
+      responses:
+        '200':
+          description: "Paginated lists retrieved successfully"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Paginator'
+        '400':
+          $ref: '#/components/responses/BadRequest'
 
   /listas/{id}:
     parameters:
@@ -595,6 +586,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
+
 
 components:
   securitySchemes:
